--- a/requirements.txt
+++ b/requirements.txt
@@ -8,5 +8,5 @@ static3==0.7.0
 typing_extensions==4.12.2
 gunicorn==23.0.0
 mysqlclient==2.2.4
-djanago-extensions=3.2.3
+django-extensions=3.2.3
 django-test-without-migrantions==0.6
